# njord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  VISION.md  flake.nix  rust-toolchain.toml
docs/plans/: 2026-01-30-edit-command-design.md  2026-01-30-edit-command.md  2026-01-30-live-variables-design.md  2026-01-30-live-variables-implementation.md
src/: cli.rs  commands.rs  config.rs  history.rs  input_history.rs  main.rs  prompts.rs  repl.rs  session.rs  ui.rs  variable.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
