[package]
name = "njord"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Interactive LLM REPL - Navigate the vast ocean of AI conversations"
license = "MIT"
repository = "https://github.com/yourusername/njord"
keywords = ["llm", "repl", "ai", "chat", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["io-util"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
rustyline = { version = "13.0", features = ["with-file-history"] }

[dev-dependencies]
tempfile = "3.0"
